terraform_modules/ec2/sg.tf
resource "aws_security_group" "ec2" {
  vpc_id      = var.vpc_id
  name        = "${var.hyphen_prefix}-ec2-sg"
  description = "security group for ec2 that allows ssh and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow All IPv4 Egress"
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    ipv6_cidr_blocks = ["::/0"]
    description      = "Allow All IPv6 Egress"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["42.119.85.88/32"]
    description = "Allow SSH"
  }

  ingress {
    from_port   = 32080
    to_port     = 32080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP"
  }

  ingress {
    from_port   = 32443
    to_port     = 32443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTPS"
  }

  tags = {
    Name = "${var.hyphen_prefix}-ec2-sg"
  }
}
